--- a/src/components/EncabezadoTabla.css
+++ b/src/components/EncabezadoTabla.css
@@ -2,11 +2,11 @@
     background: linear-gradient(90deg, #009FE3 0%, #00CFFF 100%);
     color: white;
     padding: 20px;
-    margin: 0; /* Asegurarse de que no haya margen para la alineación */
+    margin: 0; 
     border-radius: 8px 8px 0 0; /* Opcional: para coincidir con el estilo */
     text-align: center;
-    width: 100%; /* Asegurarse de que ocupe todo el ancho del contenedor */
-    box-sizing: border-box; /* Incluir padding y border en el ancho */
+    width: 100%; /*ancho del contenedor */
+    box-sizing: border-box; /*padding y border en el ancho */
   }
   
   .encabezado-tabla h2 {
