crud hazzar , criticidad

--- a/src/components/ActivityPlanner/ActivityPlannerStyle.css
+++ b/src/components/ActivityPlanner/ActivityPlannerStyle.css
@@ -1,5 +1,6 @@
 .custom-margin {
     margin-top: 50px; /* Ajusta este valor según tus necesidades */
+    border-radius: 10px;
   }
   
   .full-width {
