--- a/src/components/CardActivities/CardActivitiesStyle.css
+++ b/src/components/CardActivities/CardActivitiesStyle.css
@@ -1,3 +1,11 @@
+.card-container {
+    margin: 160px;
+    margin-top: 200px;
+    position: absolute;
+    left: 915px;
+    top: 20%;
+}
+
 .card {
     width: 100%;
     padding: 20px;
@@ -6,9 +14,3 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.card-container {
-    margin: 160px;
-    position: absolute;
-    left: 915px;
-    top: 20%;
-}
