--- a/src/components/ActivitiesTable/ActivitiesTableStyle.css
+++ b/src/components/ActivitiesTable/ActivitiesTableStyle.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items:first baseline ;
     margin: 10px;
+    margin-top: -80px;
     flex-direction: column; 
     margin-left: 50px; 
     margin-right: 195px;
