--- a/src/components/CargaImagenes/CargaImagenes.css
+++ b/src/components/CargaImagenes/CargaImagenes.css
@@ -22,3 +22,8 @@
     background-color: #007bff;
     color: white;
   }
+  .text-parrafo-dropzone{
+    color: #007bff;
+    font-size: 14px;
+    text-align: center;
+  }
