--- a/src/components/Tareas/Tareas.css
+++ b/src/components/Tareas/Tareas.css
@@ -52,3 +52,21 @@ table {
     color: #fff;
     font-size: 12px;
 }
+
+.dropzone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border: 2px dashed #007bff;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+  cursor: pointer;
+}
+
+
+.text-parrafo-dropzone{
+  color: #007bff;
+  font-size: 14px;
+  text-align: center;
+}
