--- a/src/components/Tareas/Tareas.css
+++ b/src/components/Tareas/Tareas.css
@@ -65,8 +65,48 @@ table {
 }
 
 
-.text-parrafo-dropzone{
+.text-parrafo-dropzone {
   color: #007bff;
   font-size: 14px;
   text-align: center;
+  margin-top: 100px;
+  position: absolute;
+  width: 100%;
+  left: 0;
 }
+
+.hidden {
+  display: none;
+}
+
+.uploaded-image-preview {
+  position: relative;
+  display: inline-block;
+}
+
+.uploaded-image-preview img {
+  width: 200px;
+  height: auto;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.uploaded-image-preview:hover img {
+  opacity: 0.6;
+}
+
+.delete-icon {
+  position: absolute;
+  top: 50px;
+  right: 80px;
+  font-size: 24px;
+  color: red;
+  cursor: pointer;
+  display: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.uploaded-image-preview:hover .delete-icon {
+  display: block;
+  opacity: 1;
+}
+
