--- a/src/components/TableHeader/TableHeaderStyle.css
+++ b/src/components/TableHeader/TableHeaderStyle.css
@@ -8,18 +8,18 @@
   color: white;
   padding: 20px;
   margin: 0; 
-  border-radius: 8px 8px 0 0; /* Opcional: para coincidir con el estilo */
+  border-radius: 8px 8px 0 0; 
   text-align: center;
-  width: 75%; /*ancho del contenedor */
-  box-sizing: border-box; /*padding y border en el ancho */
+  width: 75%; 
+  box-sizing: border-box; 
 }
 
 .tabla-contenedor-header {
-  width: 100%; /* Ajustar el ancho al 100% */
-  margin: 0 auto; /* Centrar el contenedor */
+  width: 100%; 
+  margin: 0 auto; 
   margin-top: 55px;
-  box-sizing: border-box; /* Incluir padding y border en el ancho */
-  overflow-x: auto; /* Asegurarse de que el contenido no se desborde */
+  box-sizing: border-box;
+  overflow-x: auto; 
 }
 
 .Header-titulo {
