--- a/src/components/EncabezadoTabla/EncabezadoTablaStyle.css
+++ b/src/components/EncabezadoTabla/EncabezadoTablaStyle.css
@@ -2,12 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     position: relative;
     background: linear-gradient(90deg, #009FE3 0%, #00CFFF 100%);
     color: white;
-    padding: 20px;
-    margin: 0; 
+    margin: 0;  
     border-radius: 8px 8px 0 0;
     text-align: center;
     width: 100%; 
@@ -18,23 +17,18 @@
     margin: 0;
     font-size: 1.5rem;
   }
+
+  .table-responsive {
+    margin-top: -20px;
+  }
   
-  .tabla-contenedor {
+   .tabla-contenedor {
     width: 100%; 
-    margin: 0 auto; 
-    margin-top: 55px;
+    margin: 0 auto;  
+    margin-top: 5%; 
     box-sizing: border-box; 
     overflow-x: auto;
   }
-
-  .tabla-contenedor-matriz {
-    width: 100%; 
-    margin: 0 auto; 
-    margin-top: 5px;
-    box-sizing: border-box; 
-    overflow-x: auto; 
-  }
-
 
   .action-button {
     position: absolute;
