--- a/src/components/Tareas/Tareas.css
+++ b/src/components/Tareas/Tareas.css
@@ -56,7 +56,10 @@ table {
 
 .uploaded-image-preview img {
   width: 200px;
-  height: auto;
+  height: 200px;
+  padding: 20px;
+  border: 2px dashed #007bff;
+  margin-top: 30px;
   transition: opacity 0.3s ease-in-out;
 }
 
@@ -66,9 +69,9 @@ table {
 
 .delete-icon {
   position: absolute;
-  top: 50px;
+  top: 90px;
   right: 80px;
-  font-size: 24px;
+  font-size: 50px;
   color: red;
   cursor: pointer;
   display: none;
@@ -79,4 +82,9 @@ table {
   display: block;
   opacity: 1;
 }
+
+.accordion-button::after{
+  margin: 3px 6px 0px 6px;
+}
+
 
