--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,3 +3,46 @@
     min-width: 25rem;
 }
   
+/* Estilos generales para centrar el contenido */
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Hace que el contenedor ocupe toda la altura de la ventana */
+  background-color: #f5f5f5; /* Fondo opcional */
+}
+
+.login-card {
+  width: 100%;
+  max-width: 400px; /* Anchura máxima del formulario */
+  background-color: #62c6f0;
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para el formulario */
+  padding: 20px;
+}
+
+/* Ajustes adicionales para los elementos dentro del formulario */
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form input {
+  margin-bottom: 15px;
+}
+
+.login-form button {
+  width: 100%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-white {
+  color: white;
+}
+
+.vh-100 {
+  height: 100vh;
+}
