--- a/src/components/Menu/MenuStyle.css
+++ b/src/components/Menu/MenuStyle.css
@@ -112,6 +112,6 @@
 }
   
 .nav-link span {
-    margin-left: -5px; /* Si aún quieres un pequeño espacio, ajusta este valor */
+    margin-left: -5px;
 }
 
