--- a/src/components/Menu/SidebarMenu.css
+++ b/src/components/Menu/SidebarMenu.css
@@ -1,4 +1,3 @@
-
 .sidebar {
   position: sticky;
   top: 0;
@@ -14,14 +13,18 @@
   overflow-x: hidden;
   padding-right: 15px;
   scrollbar-width: thin;
+  font-size: 18px;
+  width: 67px !important;
+  font-weight: 600;
 }
 
 .sidebar.open {
-  width: 250px;
+  width: 275px !important;
 }
 
+
 .sidebar .nav-link {
-  padding: 10px 15px;
+  padding: 10px 8px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -31,6 +34,7 @@
   justify-content: flex-start;
   transition: background-color 0.3s, color 0.3s;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .sidebar .nav-link:hover {
@@ -64,10 +68,23 @@
   display: none;
   flex-direction: column;
   padding-left: 20px;
+  transition: all 0.3s ease; 
 }
 
 .submenu-open {
   display: block;
+  animation: fadeIn 0.3s ease; 
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .submenu .nav-link {
@@ -85,13 +102,18 @@
 
 
 .btn-sidebar {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: transparent;
+  margin-top: 20px;
+  background: none;
   border: none;
   color: white;
   cursor: pointer;
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  justify-content: center;
+  width: 100%; 
+  padding: 0.5rem; 
+  padding-top: 0px;
 }
 
 .fa-chevron-left, .fa-chevron-right {
@@ -106,17 +128,14 @@
   justify-content: flex-end;
 }
 
-
 .main-content {
   flex-grow: 1;
   padding: 10px;
 }
 
-
 .text-custom-color {
   color: #4285F4 !important;
 }
-
 
 .sidebar .menu {
   padding: 0;
@@ -128,21 +147,36 @@
   position: relative;
 }
 
-
-.btn-sidebar:focus {
-    
-  outline: none;
+.menu-item .nav-link:hover {
+  background-color: #495057;
 }
 
-.sidebar.open .btn-sidebar {
-  justify-content: flex-end;
+.menu-item .nav-link i {
+  margin-right: 10px;
 }
 
 .nav-link span {
   margin-left: -5px;
 }
 
+a.d-flex.align-items-center {
+  text-decoration: none;
+}
 
 
+.sidebar .nav-link i {
+  margin-right: 10px;
+  cursor: pointer; 
+}
+
+.ms-auto {
+  margin-left: auto;
+  cursor: pointer; 
+}
+
+
+.sidebar .nav-link:hover i {
+  color: #fff; 
+}
 
 
