--- a/src/components/Boton/ActionButtonStyle.css
+++ b/src/components/Boton/ActionButtonStyle.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
   
