--- a/src/components/EncabezadoTabla/EncabezadoTablaStyle.css
+++ b/src/components/EncabezadoTabla/EncabezadoTablaStyle.css
@@ -25,8 +25,8 @@
   
    .tabla-contenedor {
     width: 100%; 
-    margin: 0 auto;  
-    margin-top: 5%; 
+    margin: 0% auto;  
+    margin-top: 0%; 
     box-sizing: border-box; 
     overflow-x: auto;
   }
