--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -9,7 +9,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh; /* Hace que el contenedor ocupe toda la altura de la ventana */
-  background-color: #f5f5f5; /* Fondo opcional */
+  background-image: url('../../img/back-login.png'); /* Ruta de la imagen */
+  background-size: cover; /* Hace que la imagen cubra todo el contenedor */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  
 }
 
 .login-card {
