--- a/src/components/TableHeader/TableHeaderStyle.css
+++ b/src/components/TableHeader/TableHeaderStyle.css
@@ -7,7 +7,7 @@
   background: linear-gradient(90deg, #009FE3 0%, #00CFFF 100%);
   color: white;
   padding: 20px;
-  margin: 0; 
+  margin: 0;
   border-radius: 8px 8px 0 0; 
   text-align: center;
   width: 75%; 
@@ -19,7 +19,7 @@
   margin: 0 auto; 
   margin-top: 55px;
   box-sizing: border-box;
-  overflow-x: auto; 
+  overflow-x: auto;
 }
 
 .Header-titulo {
@@ -28,7 +28,7 @@
 }
 
 .tabla-scroll {
-  max-height: 400px; /* Puedes ajustar esta altura */
+  max-height: 400px;
   overflow-y: auto;
 }
 
